--- a/style_projetos.css
+++ b/style_projetos.css
@@ -1,11 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato');
 
-
-
-* {
-    font-family: 'Open Sans', sans-serif;
-}
-
 body {
     margin: 0;
     padding: 0;
@@ -13,38 +7,10 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
-
-/* CONTADOR */
-
-button {
-    height: 40px;
-    width: 40px;
-    border-radius: 50%;
-    border: 2px solid #454545;
-    background-color: #00a5a5;
-    color:#3d3d3d;
-    font-size: 16pt;
-    font-weight: 600;
-    text-align: center;
-}
-
-#counter {
-    display: flex;
-}
-
-#currentNumber {
-    display: flex;
-    align-items: center;
-    margin: 0 20px;
-    font-size: 16pt;
-    color: #00a5a5;
-}
-
-
 /* HEADER */
 
 .header-wrapper {
-    height: 100vh;
+    height: 50vh;
     width: 100vw;
     background: linear-gradient(-45deg, #050404, #00343d, #00a5a5, #32c5ff);
     background-size: 400% 400%;
@@ -242,87 +208,52 @@ a:hover {
     margin: 3rem 0;
 }
 
-.card-container {
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    width: 90%;
+.container h1 {
+color: black;
 }
 
-.counter-container {
-    margin-top: 10px;
+
+.card-container {
+    color: black;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    width: 100%;
+    width: 75%;
+    flex-direction: row;
+}
+
+.project-description-container {
+    color: black;
+    display: flex;
+    align-items: start;
+    justify-content: space-evenly;
+    width: 50%;
     flex-direction: column;
 }
 
-
-.github {
-    height: 300px;
-    width: 400px;
-    margin: 3rem 0 0 0;
-    background-image: url('./Capturadetela2022-04-19085358.png');
+.project-description-container p {
+  text-align: justify;
 }
 
-.linkedin {
-    height: 300px;
-    width: 400px;
-    margin: 3rem 0 0 0;
-
-    background-image: url('./Capturadetela2022-04-19085358.png');
-}
-
-.instagram {
-    height: 400px;
-    width: 400px;
-    margin: 3rem 0 0 0;
-    background-image: url('./instagram-background.jpg');
+.project-image-container {
+    color: black;
+    display: flex;
+    align-items: start;
+    justify-content: space-evenly;
+    width: 30vh;
+    height: 30vh;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    filter: grayscale(0.5);
-    color: white;
-    cursor: pointer;
-    transition: 0.3s;
+    background-size: contain;
 }
 
-.linkedin {
-    height: 400px;
-    width: 400px;
-    margin: 3rem 0 0 0;
-    background-image: url('./linkedin-background.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    filter: grayscale(0.5);
-    color: white;
-    cursor: pointer;
-    transition: 0.3s;
+.iztrain .project-image-container {
+    background-color: black;
+    background-image: url('iztrain.png');
 }
 
-.github {
-    height: 400px;
-    width: 400px;
-    margin: 3rem 0 0 0;
-    background-image: url('./github-background.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    filter: grayscale(0.5);
-    color: white;
-    cursor: pointer;
-    transition: 0.3s;
+.beecare .project-image-container {
+    background-image: url('beecare.png');
 }
 
 
@@ -370,29 +301,6 @@ a:hover {
     transition: 0.3s;
 }
 
-.instagram:hover {
-    filter: unset;
-}
-
-.linkedin:hover {
-    filter: unset;
-}
-
-.github:hover {
-    filter: unset;
-}
-
-.card:hover>.card-wrapper::before {
-    height: 250px;
-    width: 350px;
-    opacity: 1;
-}
-
-.card:hover>.card-wrapper p {
-    opacity: 1;
-    visibility: visible;
-    font-size: 14px;
-}
 
 /* FOOTER */
 
@@ -406,6 +314,9 @@ a:hover {
 }
 
 @media (max-width: 800px) {
+
+
+
     .social-media {
         display: flex;
         flex-direction: column;
@@ -429,6 +340,17 @@ a:hover {
         width: 250px;
     }
 
+    .card-text {
+        width: 90%;
+        margin-top: 2rem;
+        text-align: center;
+    }
+
+    .card:hover>.card-wrapper::before {
+        height: 190px;
+        width: 190px;
+    }
+
     .name  {
         text-transform: uppercase;
         letter-spacing: 3px;
@@ -441,14 +363,48 @@ a:hover {
         font-size: 10px;
     }
 
-    .card-text {
-        width: 90%;
-        margin-top: 2rem;
-        text-align: center;
+    .header-wrapper {
+        padding-top: 40px;
+        height: 30vh;
     }
 
-    .card:hover>.card-wrapper::before {
-        height: 190px;
-        width: 190px;
-    }
+
+
+.social-media {
+    margin-top: 1rem;
+    display: flex;
+}
+
+.social-media a {
+    text-decoration: none;
+    color: #ffffff;
+    font-size: 24px;
+    padding: 0.3rem 2rem;
+    border: 1px solid #ffffff;
+    min-width: 4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: .5s cubic-bezier(0.55, 0.025, 0.675, 0.97);
+}
+   
+.project-description-container {
+    color: black;
+    display: flex;
+    align-items: start;
+    justify-content: space-evenly;
+    width: 90%;
+    flex-direction: column;
+}
+
+.iztrain .project-image-container {
+    background-color: black;
+    background-image: url('iztrain.png');
+    margin-top: 10px;
+}
+
+.beecare .project-image-container {
+    background-image: url('beecare.png');
+    margin-top: 10px;
+}
 }
